Opened 14 years ago

Closed 14 years ago

#3934 closed bug (fixed)

Unable to unmount a filesystem after two mounts on the same mount point

Reported by: VinDuv Owned by: axeld
Priority: normal Milestone: R1
Component: System/Kernel Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: x86

Description

Haiku does not allows mounting two filesystems on the same directory : the second mount fails with "Device/File/Resource busy". But after this, unmounting the filesystem also fails with the same error.

> mount -t fat mydisk1.img /fat
> unmount /fat
> mount -t fat mydisk1.img /fat
> mount -t fat mydisk2.img /fat
mount: Device/File/Resource busy
> unmount /fat
unmount: unmounting failed: Device/File/Resource busy

Change History (2)

comment:1 by axeld, 14 years ago

Status: newassigned

comment:2 by axeld, 14 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev30773.

Note: See TracTickets for help on using tickets.