* The covered vnode release was never put when it already was a mount point   during fs_mount(). This fixes bug #3934.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30773 a95241bf-73f2-0310-859d-f6bbb57e9c96